--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+            channel: stable
+            flutter-version: 3.22.3
 
       # Step 3: Install dependencies
       - name: Install dependencies
