Added JAVA Version on Workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,13 @@ jobs:
         with:
             channel: stable
             flutter-version: 3.24.3
-            working-directory: private-repo
+      - name: Checkout the code
+        uses: actions/checkout@v2
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: "temurin"
 
       - name: List files in current directory
         run: ls -R
