--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Smart-Bill-Book/smart-bill-book-release
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RELEASE_TOKEN }}
           path: release-repo
 
       # Step 6: Copy build artifacts to release repository
