--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,15 +85,17 @@ jobs:
         run: flutter build windows --release --dart-define-from-file flavors/smart_store/production.json
         working-directory: private-repo
 
-      - name: Archive Artifacts
-        uses: thedoctor0/zip-release@master
-        with:
-            type: "zip"
-            filename: Smart-Store-Billing-Software-windows.zip
-            directory: private-repo/build/windows/x64/runner/Release
+    #   - name: Archive Artifacts
+    #     uses: thedoctor0/zip-release@master
+    #     with:
+    #         type: "zip"
+    #         filename: Smart-Store-Billing-Software-windows.zip
+    #         directory: private-repo/build/windows/x64/runner/Release
 
-      - name: Copy Windows Build Zip to release repository
-        run: cp private-repo/build/windows/x64/runner/Release/Smart-Store-Billing-Software-windows.zip release-repo/
+    #   - name: Copy Windows Build Zip to release repository
+    #     run: cp private-repo/build/windows/x64/runner/Release/Smart-Store-Billing-Software-windows.zip release-repo/
+      - name: List all files recursively
+        run: dir /s
 
       - name: Compile .ISS to .EXE Installer
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
