#000 | Agnel Selvan | Added SQLIte DLL on pipeline for windows build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Flutter Release
 on:
     push:
         branches:
-        - main  # Trigger on push to main branch, adjust as needed
+        - db-migration  # Trigger on push to main branch, adjust as needed
     workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
@@ -84,6 +84,9 @@ jobs:
       - name: Build Flutter EXE
         run: flutter build windows --release --dart-define-from-file flavors/smart_store/production.json
         working-directory: private-repo
+
+      - name: Copy SQLITE File to windows build folder
+        run: cp private-repo/pipeline_configs/sqlite3.dll private-repo/build/windows/x64/runner/Release
 
       - name: Compile .ISS to .EXE Installer
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
