--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Smart-Bill-Book/smart-bill-book
-          ref: 50
+          ref: main
           token: ${{ secrets.RELEASE_TOKEN }}
           path: private-repo
 
@@ -94,14 +94,14 @@ jobs:
             path: private-repo/exe_generator/smart-store.iss
             options: /O+
 
-      - name: Copy Windows Build Zip to release repository
-        shell: pwsh
-        run: |
-          $source = Join-Path -Path "${{ github.workspace }}" -ChildPath "private-repo/exe_generator/Output/billing.exe"
-          $destination = Join-Path -Path "${{ github.workspace }}" -ChildPath "/"
-          Write-Host "Source Path: $source"
-          Write-Host "Destination Path: $destination"
-          Copy-Item -Path $source -Destination $destination
+      # - name: Copy Windows Build Zip to release repository
+      #   shell: pwsh
+      #   run: |
+      #     $source = Join-Path -Path "${{ github.workspace }}" -ChildPath "private-repo/exe_generator/Output/billing.exe"
+      #     $destination = Join-Path -Path "${{ github.workspace }}" -ChildPath "/"
+      #     Write-Host "Source Path: $source"
+      #     Write-Host "Destination Path: $destination"
+      #     Copy-Item -Path $source -Destination $destination
 
       - name: Push Windows EXE to releases
         uses: ncipollo/release-action@v1
