--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Smart-Bill-Book/smart-bill-book
-          ref: razorpay-test
+          ref: 52
           token: ${{ secrets.RELEASE_TOKEN }}
           path: private-repo
 
