--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,9 @@ jobs:
       - name: Copy SQLITE File to windows build folder
         run: cp private-repo/pipeline_configs/sqlite3.dll private-repo/build/windows/x64/runner/Release
 
+      - name: Creating a msix
+        run: dart run msix:create --store
+
       - name: Compile .ISS to .EXE Installer
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
         with:
@@ -102,11 +105,32 @@ jobs:
           Write-Host "Source Path: $source"
           Write-Host "Destination Path: $destination"
           Copy-Item -Path $source -Destination $destination
+    
+      - name: Copy Windows MSIX Zip to release repository
+        shell: pwsh
+        run: |
+          $source = Join-Path -Path "${{ github.workspace }}" -ChildPath "private-repo/build/windows/x64/runner/Release/smart_billing.msix"
+          $destination = Join-Path -Path "${{ github.workspace }}" -ChildPath "/"
+          Write-Host "Source Path: $source"
+          Write-Host "Destination Path: $destination"
+          Copy-Item -Path $source -Destination $destination
 
       - name: Push Windows EXE to releases
         uses: ncipollo/release-action@v1
         with:
             artifacts: "billing.exe"
+            tag: v0.0.${{ github.run_number }}
+            token: ${{secrets.WORKFLOW_RELEASE_TOKEN}}
+            commit: main
+            replacesArtifacts: false
+            allowUpdates: true
+        env:
+            GITHUB_TOKEN: ${{ secrets.WORKFLOW_RELEASE_TOKEN }}
+            
+      - name: Push Windows EXE to releases
+        uses: ncipollo/release-action@v1
+        with:
+            artifacts: "smart_billing.msix"
             tag: v0.0.${{ github.run_number }}
             token: ${{secrets.WORKFLOW_RELEASE_TOKEN}}
             commit: main
