--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Copy Windows Build Zip to release repository
         shell: pwsh
         run: |
-          $source = Join-Path -Path "${{ github.workspace }}" -ChildPath "private-repo/exe_generator/Output/billing.exe"
+          $source = Join-Path -Path "${{ github.workspace }}" -ChildPath "private-repo/exe_generator/Output/smart-bill-book.exe"
           $destination = Join-Path -Path "${{ github.workspace }}" -ChildPath "/"
           Write-Host "Source Path: $source"
           Write-Host "Destination Path: $destination"
@@ -121,7 +121,7 @@ jobs:
       - name: Push Windows EXE to releases
         uses: ncipollo/release-action@v1
         with:
-            artifacts: "billing.exe"
+            artifacts: "smart-bill-book.exe"
             tag: v${{ env.APP_VERSION }}
             token: ${{secrets.WORKFLOW_RELEASE_TOKEN}}
             commit: main
