--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -65,6 +65,27 @@ jobs:
               Write-Host "Failed to extract version from pubspec.yaml"
               exit 1
           }
+
+      - name: Extract release notes
+        shell: pwsh
+        run: |
+          $changelogContent = Get-Content "private-repo/CHANGELOG-pre.md" -Raw
+          $version = $env:APP_VERSION
+
+          # Extract content between version headers
+          $pattern = "## \[$version\].*?\n(.*?)(?=\n## \[|$)"
+          $releaseNotes = [regex]::Match($changelogContent, $pattern, [System.Text.RegularExpressions.RegexOptions]::Singleline)
+
+          if ($releaseNotes.Success) {
+              $notes = $releaseNotes.Groups[1].Value.Trim()
+              echo "RELEASE_NOTES<<EOF" >> $env:GITHUB_ENV
+              echo "$notes" >> $env:GITHUB_ENV
+              echo "EOF" >> $env:GITHUB_ENV
+              Write-Host "Extracted release notes for version $version"
+          } else {
+              Write-Host "No release notes found for version $version"
+              echo "RELEASE_NOTES=No release notes available for this version." >> $env:GITHUB_ENV
+          }
     
 
       # Step 3.5: Running Build Runner
@@ -134,5 +155,6 @@ jobs:
             replacesArtifacts: false
             allowUpdates: true
             prerelease: true
+            body: ${{ env.RELEASE_NOTES }}
         env:
             GITHUB_TOKEN: ${{ secrets.WORKFLOW_RELEASE_TOKEN }}
