Updated release tagname with buildnumber

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -49,7 +49,7 @@ jobs:
               $versionNumber = $versionMatch.Groups[1].Value
               $buildNumber = $versionMatch.Groups[2].Value
               $version = "$versionNumber-pre"
-              echo "APP_VERSION=$version" >> $env:GITHUB_ENV
+              echo "APP_VERSION=$version+$buildNumber" >> $env:GITHUB_ENV
               
               # Update pubspec.yaml with pre-release version
               $newPubspecContent = $pubspecContent -replace 'version:\s*\d+\.\d+\.\d+\+\d+', "version: $version+$buildNumber"
