--- a/configuration.json
+++ b/configuration.json
@@ -20,13 +20,15 @@
       "version": "1.4.3",
       "build_number": "567",
       "release_notes": "Bug Fixes and improvements",
-      "url": "https://play.google.com/store/apps/details?id=com.smartbillbook.app&hl=en_IN"
+      "url": "https://play.google.com/store/apps/details?id=com.smartbillbook.app&hl=en_IN",
+      "is_force_update": true
     },
     "windows": {
       "version": "1.4.3",
       "build_number": "567",
       "release_notes": "Bug Fixes and improvements",
-      "url": "https://apps.microsoft.com/detail/9pkxj10brmpk"
+      "url": "https://apps.microsoft.com/detail/9pkxj10brmpk",
+      "is_force_update": true
     }
   }
 }
