--- a/configuration.json
+++ b/configuration.json
@@ -21,14 +21,14 @@
       "build_number": "567",
       "release_notes": "Bug Fixes and improvements",
       "url": "https://play.google.com/store/apps/details?id=com.smartbillbook.app&hl=en_IN",
-      "is_force_update": true
+      "is_force_update": false
     },
     "windows": {
       "version": "1.4.31",
       "build_number": "567",
       "release_notes": "Bug Fixes and improvements",
       "url": "https://apps.microsoft.com/detail/9pkxj10brmpk",
-      "is_force_update": true
+      "is_force_update": false
     }
   }
 }
