--- a/configuration.json
+++ b/configuration.json
@@ -19,9 +19,9 @@
     "android": {
       "version": "1.5.3",
       "build_number": "567",
-      "release_notes": "Major Bug Fixes and improvements Android",
+      "release_notes": null,
       "url": "https://play.google.com/store/apps/details?id=com.smartbillbook.app&hl=en_IN",
-      "is_force_update": false
+      "is_force_update": true
     },
     "windows": {
       "version": "1.5.3",
