--- a/configuration.json
+++ b/configuration.json
@@ -19,14 +19,14 @@
     "android": {
       "version": "1.4.3",
       "build_number": "567",
-      "release_notes": null,
+      "release_notes": "Added a mobile-friendly user interface for improved accessibility across devices. Implemented performance optimizations and resolved various bugs to ensure a smoother, more reliable user experience.",
       "url": "https://play.google.com/store/apps/details?id=com.smartbillbook.app&hl=en_IN",
       "is_force_update": true
     },
     "windows": {
       "version": "1.4.3",
       "build_number": "567",
-      "release_notes": "Major Bug Fixes and improvements Windows",
+      "release_notes": "Added a mobile-friendly user interface for improved accessibility across devices. Implemented performance optimizations and resolved various bugs to ensure a smoother, more reliable user experience.",
       "url": "https://apps.microsoft.com/detail/9pkxj10brmpk",
       "is_force_update": false
     }
